# Automotive_Bootloader

./: .gitignore  Automotive_Bootloader.ioc  CMakeLists.txt  Makefile
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Application_CM4.language.settings.xml  Application_CM7.language.settings.xml  Automotive_Bootloader_With_USD_CM4.language.settings.xml  Automotive_Bootloader_With_USD_CM7.language.settings.xml  Blynk_CM4.language.settings.xml  Blynk_CM7.language.settings.xml  BootManager.language.settings.xml  BootManager_CM4.language.settings.xml  BootManager_CM7.language.settings.xml  CANABLE_TEST_CM4.language.settings.xml  CANABLE_TEST_CM7.language.settings.xml  CAN_FD_CM4.language.settings.xml  CAN_FD_CM7.language.settings.xml  ClassicCAN_CM4.language.settings.xml  ClassicCAN_CM7.language.settings.xml  EEPROM_TEST_CM4.language.settings.xml  EEPROM_TEST_CM7.language.settings.xml  FlashBootloader_CM4.language.settings.xml  FlashBootloader_CM7.language.settings.xml  UART_Project.1712677965632.pdom  UART_Project.language.settings.xml  UART_Test_CM4.language.settings.xml  UART_Test_CM7.language.settings.xml  Virtual_Communication_CM4.language.settings.xml  Virtual_Communication_CM7.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/.root/: 30.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.ui.workbench.swt/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Application/CM4/: .project
Application/CM7/: .cproject
Application/CM7/Core/Inc/: stm32h7xx_hal_conf.h
Application/CM7/Core/Src/: main.c  stm32h7xx_it.c
Application/CM7/Debug/: Application_CM7.list  Application_CM7.map
BootManager/: .project  BootManager.ioc
BootManager/CM4/: .project
BootManager/CM4/Core/Src/: main.c
BootManager/CM7/Core/Inc/: BootManager_FSM.h  hash_check.h
BootManager/CM7/Core/Src/: BootManager_FSM.c  main.c
BootManager/CM7/Debug/: BootManager_CM7.list  BootManager_CM7.map  makefile
CM4/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_nucleo_conf.h
CM7/Core/Inc/: Appinfo.h  BootManager_FSM.h  hashcheck.h  main.h  memory.h  nor_driver.h  sdram_driver.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
CM7/Core/Src/: Appinfo.c  BootManager_FSM.c  main.c  memory.c  nor_driver.c  sdram_driver.c  stm32h7xx_it.c
Client/GUI/BackEnd/: Transport.py  UDSClient.py  UDSFrame.py  UDSRequest.py  UDSResponse.py
Core/Inc/: main.h
Core/Src/: main.c
Crypto/Inc/: Utils.h  aes.h  cmac.h  common.h
Crypto/Src/: Utils.c  aes.c  cmac.c
Drivers/BSP/STM32H7xx_Nucleo/: stm32h7xx_nucleo.h
Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_crc.c
EWARM/: Automotive_Bootloader.ewd  Automotive_Bootloader.ewp  Project.eww  stm32h755xx_sram2_CM4.icf
FlashBootloader/: .mxproject  FlashBootloader.ioc
FlashBootloader/CM4/: .cproject  .project
FlashBootloader/CM7/: .project  FlashBootloader_CM7.launch  STM32H755ZITX_RAM.ld
FlashBootloader/CM7/Core/Inc/: FlashBootloader.h  hash_check.h  public_key.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
FlashBootloader/CM7/Core/Src/: FlashBootloader.c  cmox_low_level.c  hash_check.c  main.c
FlashBootloader/CM7/Debug/: FlashBootloader_CM7.list  FlashBootloader_CM7.map  makefile
FlashBootloader/tools/: PostBuild.sh  private_key.pem  public_key.pem
Gui/: gui.py
Gui/USB-CAN-A/: .Makefile.swp  Makefile  serial.py  test.py
Server/Application/: .mxproject  .project  Application.ioc
Server/Application/CM4/: .cproject
Server/Application/CM7/: .project  Application_CM7 Debug.launch
Server/BootManager/: .mxproject  CMakeLists.txt  Makefile
Server/BootManager/CM4/: .cproject
Server/BootManager/CM7/: .cproject  .project
Server/FlashBootloader/: .project
Server/FlashBootloader/CM7/: .cproject  STM32H755ZITX_FLASH.ld
Server/FlashBootloader/Scripts/: generate_keys.sh
Server/FlashBootloader/Unity_test/: CMakeLists.txt
Server/FlashBootloader/Unity_test/src/: main.c  main.h
Server/FlashBootloader/Unity_test/test/: test_main.c
Server/UDS_Server/Inc/: DiagnosticSessionControl.h  ECU_Reset.h  Interfaces_accessing_var.h  ReadDataByID.h  RequestDownload.h  RequestTransferExit.h  RoutineControl.h  SecurityAccess.h  TransferData.h  fbl_diag_core.h
Server/UDS_Server/Src/: DiagnosticSessionControl.c  ECU_Reset.c  ReadDataByID.c  RequestDownload.c  RequestTransferExit.c  RoutineControl.c  SecurityAccess.c  TransferData.c
(+371 files in other folders)
